2015-05-17  Julien Bect  <julien.bect@supelec.fr>

	Fix %!shared blocks in unit tests.

	* arrays/@stk_hrect/stk_normalize.m: Fix unit test.
	* arrays/generic/stk_feval.m: Fix unit test.

2015-04-22  Julien Bect  <julien.bect@supelec.fr>

	Improve indexing (subasgn/subsref) for stk_dataframe objects.

	* arrays/@stk_dataframe/subsasgn.m: Preserve row names and column
	names when it is possible (closes ticket #21).
	* arrays/@stk_dataframe/subsref.m: Allow for several levels of
	indexing in the case of ()-indexing.

	stk_dataframe.m: Add help text

	* arrays/@stk_dataframe/stk_dataframe.m: Add help text (closes
	ticket #26).

2015-04-21  Julien Bect  <julien.bect@supelec.fr>

	stk_hrect.m: Add help text

	* arrays/@stk_hrect/stk_hrect.m: Add help text (closes ticket #27).

2015-04-20  Julien Bect  <julien.bect@supelec.fr>

	stk_boundingbox.m: Add doc and overload for several classes (ticket #28)

	* arrays/generic/stk_boundingbox.m: Add doc. Handle plain arrays only.
	* arrays/@stk_dataframe/stk_boundingbox.m: Overload.
	* arrays/@stk_factorialdesign/stk_boundingbox.m: Overload.
	* arrays/@stk_hrect/stk_boundingbox.m: Overload.
	* arrays/@struct/stk_boundingbox.m: Overload.

2015-04-05  Julien Bect  <julien.bect@supelec.fr>

	stk_feval.m: Update documentation.

	* stk_feval.m: Update documentation.

2015-03-11  Julien Bect  <julien.bect@supelec.fr>

	stk_feval.m: Implement vectorized calls and use them by default.

	* arrays/generic/stk_feval.m: Implement vectorized calls and use them by
	default.
	* paramestim/stk_param_relik.m: Fix unit test.

	Fix progress indicator in stk_feval.

	* arrays/generic/stk_feval.m: Restore the progress indicator.
	* misc/text/stk_disp_progress.m: Fix progress message.

2015-03-04  Julien Bect  <julien.bect@supelec.fr>

	stk_distrib_normal_cdf.m: Fix the zero-variance case

	* misc/distrib/stk_distrib_normal_cdf.m: Fix the zero-variance
	case. Add unit tests.

	Fix bugs in stk_distrib_*_ei functions.
